Created Modal and drag and drop list

--- a/src/layouts/PlaygroundLayout/PlaygroundLayout.module.css
+++ b/src/layouts/PlaygroundLayout/PlaygroundLayout.module.css
@@ -1,11 +1,12 @@
 .playgroundLayout {
   position: relative;
   width: 100vw;
-  min-height: 100vh;
+  height: 100vh;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   background-color: hsl(240, 4%, 9%);
   align-items: center;
-  margin-top: 10vh;
+  padding-top: 10vh;
   justify-content: center;
 }
