--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -10,21 +10,20 @@
   align-items: center;
 }
 
-.closeButton{
-    color: hsl(240, 3%, 12%);
-    transform: rotateZ(40deg);
-    font-size: 25px;
-    font-weight: 600;
-    align-self: flex-end;
-    width: 20px;
-    height: 30px;
-    background-color: grey;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
+.closeButton {
+  color: hsl(240, 3%, 12%);
+  transform: rotateZ(40deg);
+  font-size: 25px;
+  font-weight: 600;
+  align-self: flex-end;
+  width: 20px;
+  height: 30px;
+  background-color: grey;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
 }
-
 
 .modalForm {
   /* min-height: 20vh; */
@@ -36,64 +35,73 @@
   background-color: hsl(240, 3%, 12%);
   color: white;
 }
-.modalHeading{
-    font-weight: 800;
-    font-size: 25px;
-    display: block;
-    text-align: left;
+.modalHeading {
+  font-weight: 800;
+  font-size: 25px;
+  display: block;
+  text-align: left;
 }
-.modalFormWrapper{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-
+.modalFormWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
-.modalFormButton{
-    background-color: dodgerblue;
-    color: white;
-    margin-top: 1rem;
-    align-self: flex-end;
-    border-radius: 6px;
-    padding: 6px 18px;
-    font-weight: 700;
-    font-size: 15px;
+.modalFormButton {
+  background-color: cornflowerblue;
+  color: white;
+  margin-top: 1rem;
+  align-self: flex-end;
+  border-radius: 6px;
+  padding: 6px 18px;
+  font-weight: 700;
+  font-size: 15px;
 }
 
-.radioButton{
-    padding: 6px 10px;
-    color: #ffffff70;
-    margin-right: 10px ;
-    font-size: 14px;
-    border: 1px solid #ffffff80;
-    border-radius: 4px;
-    transition: all 250ms ease-in;
-  }
+.radioButton {
+  padding: 6px 10px;
+  color: #ffffff70;
+  margin-right: 10px;
+  font-size: 14px;
+  border: 1px solid #ffffff80;
+  border-radius: 4px;
+  transition: all 250ms ease-in;
+}
 
+.radioButton:hover {
+  color: #ffffff;
+  border: 1px solid #ffffff00;
+  background-color: hsl(240, 3%, 32%);
+}
 
-  .radioButton:hover{
-    color: #ffffff;
-    border: 1px solid #ffffff00;
-    background-color: hsl(240, 3%, 32%);
+.radioButtonGroup {
+  display: flex;
+}
 
-  }
-
-  .radioButtonGroup{
-      display: flex;
-
-  }
-
-  .formLabels{
-      margin-top: 0.3em;
-      margin-bottom: 0.5em;
-  }
-  .numberSelect{
-      width: 80%;
-      background-color: transparent;
-      border: 1px solid #ffffff60;
-      padding: 10px;
-      font-size: 16px;
-      border-radius: 6px;
-      height: 25px;
-      color: white;
-      margin-bottom: 0.5rem;
-  }
+.formLabels {
+  margin-top: 0.3em;
+  margin-bottom: 0.5em;
+}
+.numberSelect {
+  width: 80%;
+  background-color: transparent;
+  border: 1px solid #ffffff60;
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 6px;
+  height: 25px;
+  color: white;
+  margin-bottom: 0.5rem;
+}
+.modeSelect {
+  width: 80%;
+  background-color: #fff;
+  background-repeat: no-repeat, repeat;
+  background-position: right 0.7em top 50%, 0 0;
+  background-size: 0.65em auto, 100%;
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 6px;
+  height: 35px;
+  color: black;
+  margin-bottom: 0.5rem;
+}
