--- a/src/layouts/PlaygroundLayout/PlaygroundLayout.module.css
+++ b/src/layouts/PlaygroundLayout/PlaygroundLayout.module.css
@@ -1,7 +1,7 @@
 .playgroundLayout {
   position: relative;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
