--- a/src/components/LoudText/LoudText.module.css
+++ b/src/components/LoudText/LoudText.module.css
@@ -1,6 +1,6 @@
 .loudText{
-    font-weight: 900;
-    font-size: 7vw;
-    color: hsl(9, 79%, 47%);
+    font-weight: 700;
+    font-size: 5vw;
+    color: white;
     line-height: 75px;
 }
