--- a/src/layouts/PlaygroundLayout/PlaygroundLayout.module.css
+++ b/src/layouts/PlaygroundLayout/PlaygroundLayout.module.css
@@ -8,5 +8,8 @@
   background-color: hsl(240, 4%, 9%);
   align-items: center;
   padding-top: 10vh;
-  justify-content: center;
+  justify-content: flex-start;
+}
+.plLInner {
+  width: 100vw;
 }
