--- a/src/layouts/headerAndContent/HeaderAndContentLayout.module.css
+++ b/src/layouts/headerAndContent/HeaderAndContentLayout.module.css
@@ -4,7 +4,7 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
-    background-color: #ffcdd2;
+    background-color: #b22c15;
     align-items: center;
     justify-content: center;
 }
