--- a/src/components/Cards/BottomImageCard/BottomImageCard.module.css
+++ b/src/components/Cards/BottomImageCard/BottomImageCard.module.css
@@ -1,37 +1,36 @@
-.bottomImageCard{
-    height: auto;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
-    margin: 20px;
-    color: white;
-    overflow: hidden;
-    border-radius: 8px;
-    min-height:250px ;
-    /* background-color: hsl(101, 43%, 47%); */
-    /* box-shadow:2px 2px 5px hsl(240, 4%, 10%); */
+.bottomImageCard {
+  height: auto;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  color: white;
+  overflow: hidden;
+  border-radius: 8px;
+  margin: 1rem;
+  min-height: 250px;
+  /* background-color: hsl(101, 43%, 47%); */
+  /* box-shadow:2px 2px 5px hsl(240, 4%, 10%); */
 }
-.imageDiv{
-    width:80px;
-    position: absolute;
-    height: 80px;
-    bottom: -3px;
-    right: -10px;
-    border-radius: 4px;
-    /* margin-bottom: 1rem; */
-    background-color: gray;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    transform: rotateZ(20deg);
-    box-shadow: 1px 2px 10px -2px rgba(0,0,0,0.53);
-    -webkit-box-shadow: 1px 1px 20px -2px rgba(0,0,0,0.53);
-    -moz-box-shadow: 1px 2px 10px -2px rgba(0,0,0,0.53);
-
+.imageDiv {
+  width: 80px;
+  position: absolute;
+  height: 80px;
+  bottom: -3px;
+  right: -10px;
+  border-radius: 4px;
+  /* margin-bottom: 1rem; */
+  background-color: gray;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  transform: rotateZ(20deg);
+  box-shadow: 1px 2px 10px -2px rgba(0, 0, 0, 0.53);
+  -webkit-box-shadow: 1px 1px 20px -2px rgba(0, 0, 0, 0.53);
+  -moz-box-shadow: 1px 2px 10px -2px rgba(0, 0, 0, 0.53);
 }
-.title{
-    font-weight: 700;
-    font-size: 20px;
+.title {
+  font-weight: 700;
+  font-size: 20px;
 }
