--- a/src/components/Cards/BoxImageCard/BoxImageCard.module.css
+++ b/src/components/Cards/BoxImageCard/BoxImageCard.module.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 20px;
+  margin: 1rem;
   min-height: 250px;
   color: white;
   border-radius: 8px;
