--- a/src/components/Cards/CircularImageCard/CircularImageCard.module.css
+++ b/src/components/Cards/CircularImageCard/CircularImageCard.module.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 20px;
+  margin: 3%;
   color: white;
   border-radius: 8px;
   background-color: hsl(240, 3%, 12%);
