--- a/src/components/GridDisplay/GridDisplay.module.css
+++ b/src/components/GridDisplay/GridDisplay.module.css
@@ -1,5 +1,6 @@
-.gridDisplay{
-    display: grid;
-    width: 100%;
-    grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
+.gridDisplay {
+  display: grid;
+  width: 100vw;
+  box-sizing: border-box;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 }
