--- a/src/components/SPHeader/SPHeader.module.css
+++ b/src/components/SPHeader/SPHeader.module.css
@@ -1,10 +1,11 @@
 .spHeader{
     position: fixed;
     top:0;
+    left: 0;
     z-index: 5;
     background-color: black;
     color: white;
-    width: 100vw;
+    width: 100%;
     height: 10vh;
     display: flex;
     justify-content: flex-start;
